--- a/css/newStyle.sass
+++ b/css/newStyle.sass
@@ -218,17 +218,31 @@
 
   .macbookOver
     width: 700px
-    left: 69%
 
   #screenShots__bigphoto
-    width: 674px
+    width: 540px
     padding-top: 22px
 
   .bigphoto__img
     left: 43%
     max-height: 340px
 
+  .bigImg_wrapper
+    width: 520px
+    margin: 0 45px
+
+  .slick-next
+    right: -70px
+
+  .slick-prev
+    left: -70px
+
+.s_wmsSpheres
+  background: url("../images/lightBlueDotsBtm.png") repeat-x bottom
+
 .wmsSpheres
+  padding-bottom: 100px
+
   &__title
     font-family: pt_mono,Menlo,Monaco,Consolas,"Courier New",monospace
     text-align: center
@@ -277,4 +291,87 @@
       line-height: 32px
       margin-bottom: 40px
 
+.s_wmsExperience
+  background: $light
+  margin-bottom: 180px
+  position: relative
 
+  &__pattern
+    bottom: -35px
+    position: absolute
+    background: url("../images/lightBlueDotsBtm-rotate.png") repeat-x
+    height: 35px
+    width: 100%
+
+.wmsExperience
+  padding-top: 100px
+
+  .section-title
+    margin-bottom: 100px
+
+  &_top, &_bottom
+    display: flex
+    justify-content: space-between
+
+    &_left, &_right
+      width: 50%
+      position: relative
+
+  &_top
+    margin-bottom: 100px
+
+    &_right
+      padding-left: 50px
+
+  &_bottom
+    &_left
+      padding-right: 50px
+      padding-bottom: 80px
+
+    &_right
+      position: relative
+
+      img
+        position: absolute
+        left: 0
+        right: 0
+        width: 100%
+
+    .wmsExperience__nums
+      right: 0
+      left: auto
+
+  &__itemTitle
+    font-size: 24px
+    line-height: 32px
+    font-family: pt_mono,Menlo,Monaco,Consolas,"Courier New",monospace
+    font-weight: bold
+
+    span
+      color: $blue
+
+    &:nth-child(2)
+      margin-bottom: 30px
+
+  p
+    font-family: $regular
+    font-size: 18px
+    line-height: 32px
+    margin-bottom: 30px
+    z-index: 2
+    position: relative
+
+    &.wmsExperience_small
+      font-size: 15px
+      line-height: 26px
+
+  &__nums
+    position: absolute
+    left: 0
+    bottom: 0
+    font-family: pt_mono,Menlo,Monaco,Consolas,"Courier New",monospace
+    font-size: 185px
+    font-weight: bold
+    line-height: 125px
+    color: $white
+    z-index: 1
